edit and delete working for only currently logged in user now

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
         </li>
 
         <li ng-if="main.isLoggedIn()">
+          <a ng-click="main.logout()">Profile</a>
+        </li>
+
+        <li ng-if="main.isLoggedIn()">
           <a ui-sref="itemsIndex" ui-sref-active="active">View all items available</a>
         </li>
       </ul>
