--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
         <li ng-if="main.isLoggedIn()">
           <a ui-sref="usersIndex" ui-sref-active="active">List of Users</a>
         </li>
+
         <li ng-if="!main.isLoggedIn()">
           <a ui-sref="register" ui-sref-active="active">Register</a>
         </li>
@@ -30,7 +31,7 @@
         </li>
 
         <li ng-if="main.isLoggedIn()">
-          <a ng-click="main.logout()">Profile</a>
+          <a ui-sref="usersProfile" ui-sref-active="active">Profile</a>
         </li>
 
         <li ng-if="main.isLoggedIn()">
