--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
           <a ng-click="main.logout()">Logout</a>
         </li>
         <li ng-if="main.isLoggedIn()">
-          <a ui-sref="users.id" ui-sref-active="active">Profile</a>
+          <a ui-sref="usersShow({ id: main.userId })" ui-sref-active="active">My Profile</a>
         </li>
         <li ng-if="main.isLoggedIn()">
           <a ui-sref="itemsIndex" ui-sref-active="active">View all items available</a>
