--- a/public/index.html
+++ b/public/index.html
@@ -12,51 +12,44 @@
 
 <body ng-controller="MainController as main">
 
-  <header class="container">
-    <h1>London Fashion Exchange</h1>
-    <nav>
-      <ul class="home-navbar">
+<header>
+  <h6>London Fashion Exchange</h6>
+    <nav class="u-full-width u-pull-right">
 
-        <li ng-if="!main.isLoggedIn()">
-          <a ui-sref="register" ui-sref="register">Register</a>
-        </li>
-        <li ng-if="!main.isLoggedIn()">
-          <a ui-sref="login" ui-sref="login">Login</a>
-        </li>
-        <li ng-if="!main.isLoggedIn()">
-          <a ui-sref="/" ui-sref-active="active"></a>
-        </li>
-
-
-        <li ng-if="main.isLoggedIn()" class="welcome">Welcome {{ main.currentUser.username }} to the London Fashion Exchange</li>
-
-        <li ng-if="main.isLoggedIn()">
-          <a ui-sref="usersIndex" ui-sref-active="active">List of Users</a>
-        </li>
-        <li ng-if="main.isLoggedIn()">
-          <a ng-click="main.logout()">Logout</a>
-        </li>
-
-        <!-- <li ng-if="main.isLoggedIn()">
-          <a ui-sref="getCurrentUser({ id: main.userId })" ui-sref-active="active">My Profile</a>
-        </li> -->
-
-        <li ng-if="main.isLoggedIn()">
-          <a ui-sref="usersShow({ id: main.userId })" ui-sref-active="active">My Profile</a>
-        </li>
-
-
-        <li ng-if="main.isLoggedIn()">
-          <a ui-sref="itemsIndex" ui-sref-active="active">View all items available</a>
-        </li>
-        <li ng-if="main.isLoggedIn()">
-          <a ui-sref="requestsOffers" ui-sref-active="active">View my requests and offers</a>
-        </li>
-      </ul>
-    </nav>
+        <ul>
+          <li ng-if="!main.isLoggedIn()">
+            <a ui-sref="register" ui-sref="register">Register</a>
+          </li>
+          <li ng-if="!main.isLoggedIn()">
+            <a ui-sref="login" ui-sref="login">Login</a>
+          </li>
+          <li ng-if="!main.isLoggedIn()">
+            <a ui-sref="/" ui-sref-active="active"></a>
+          </li>
+          <li ng-if="main.isLoggedIn()" class="welcome">Welcome {{          main.currentUser.username }} to the London Fashion Exchange</li>
+          <li ng-if="main.isLoggedIn()">
+            <a ui-sref="usersShow({ id: main.currentUser.id })">My Profile</a>
+          </li>
+          <li ng-if="main.isLoggedIn()">
+            <a ui-sref="usersIndex" ui-sref="usersIndex">List of Users</a>
+          </li>
+          <li ng-if="main.isLoggedIn()">
+            <a ng-click="main.logout()">Logout</a>
+          </li>
+          <li ng-if="main.isLoggedIn()">
+            <a ui-sref="itemsIndex" ui-sref-active="active">View all items available</a>
+          </li>
+          <li ng-if="main.isLoggedIn()">
+            <a ui-sref="requestsOffers" ui-sref-active="active">View my requests and offers</a>
+          </li>
+        </ul>
+      </nav>
     <p ng-if="main.message">{{ main.message }}</p>
   </header>
 
-  <main class="container" ui-view></main>
-</body>
+
+
+
+    <main class="container" ui-view></main>
+  </body>
 </html>
