--- a/src/index.html
+++ b/src/index.html
@@ -8,48 +8,52 @@
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/vendor.js" charset="utf-8"></script>
   <script src="/js/app.js" charset="utf-8"></script>
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 </head>
-
 <body ng-controller="MainController as main">
 
-<header>
-  <h6>London Fashion Exchange</h6>
-    <nav class="u-full-width u-pull-right">
+  <header>
+    <nav class="u-full-width">
+      <img class="icon" src="/assets/images/icon.png" ng-click="home">
 
-        <ul>
-          <li ng-if="!main.isLoggedIn()">
-            <a ui-sref="register" ui-sref="register">Register</a>
-          </li>
-          <li ng-if="!main.isLoggedIn()">
-            <a ui-sref="login" ui-sref="login">Login</a>
-          </li>
-          <li ng-if="!main.isLoggedIn()">
-            <a ui-sref="/" ui-sref-active="active"></a>
-          </li>
-          <li ng-if="main.isLoggedIn()" class="welcome">Welcome {{          main.currentUser.username }} to the London Fashion Exchange</li>
-          <li ng-if="main.isLoggedIn()">
-            <a ui-sref="usersShow({ id: main.currentUser.id })">My Profile</a>
-          </li>
-          <li ng-if="main.isLoggedIn()">
-            <a ui-sref="usersIndex" ui-sref="usersIndex">List of Users</a>
-          </li>
-          <li ng-if="main.isLoggedIn()">
-            <a ng-click="main.logout()">Logout</a>
-          </li>
-          <li ng-if="main.isLoggedIn()">
-            <a ui-sref="itemsIndex" ui-sref-active="active">View all items available</a>
-          </li>
-          <li ng-if="main.isLoggedIn()">
-            <a ui-sref="requestsOffers" ui-sref-active="active">View my requests and offers</a>
-          </li>
-        </ul>
-      </nav>
+      <h6 class="brandbox">London Fashion <strong>X</strong>change</h6>
+      <p class="brandboxWelcome" ng-if="main.isLoggedIn()">Welcome {{ main.currentUser.username }}</p>
+
+      <div class="hello">
+      <ul class="navlinks">
+        <li ng-if="!main.isLoggedIn()">
+          <a ui-sref="register" ui-sref-active="register">Register</a>
+        </li>
+        <li ng-if="!main.isLoggedIn()">
+          <a ui-sref="login" ui-sref-active="login">Login</a>
+        </li>
+        <li ng-if="!main.isLoggedIn()">
+          <a ui-sref="/" ui-sref-active="active"></a>
+        </li>
+        <li ng-if="main.isLoggedIn()">
+          <a ui-sref="usersShow({ id: main.currentUser.id })">My Profile</a>
+        </li>
+        <li ng-if="main.isLoggedIn()">
+          <a ui-sref="usersIndex" ui-sref-active="usersIndex">List of Users</a>
+        </li>
+        <li ng-if="main.isLoggedIn()">
+          <a ng-click="main.logout()">Logout</a>
+        </li>
+        <li ng-if="main.isLoggedIn()">
+          <a ui-sref="itemsIndex" ui-sref-active="active">View all items available</a>
+        </li>
+        <li ng-if="main.isLoggedIn()">
+          <a ui-sref="requestsOffers" ui-sref-active="active">View my requests and offers</a>
+        </li>
+      </ul>
+      </div>
+    </nav>
+
     <p ng-if="main.message">{{ main.message }}</p>
   </header>
+<!--
+  <footer>Created with &hearts; by Natalie Pateman for General Assembly WDI 23 2016</footer> -->
+  <main class="container" ui-view></main>
 
-
-
-
-    <main class="container" ui-view></main>
-  </body>
+</body>
 </html>
