--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
   <header>
     <nav class="u-full-width">
-      <img class="icon" src="/assets/images/icon.png" ng-click="home" ui-sref-active="home">
+      <a><img class="icon" src="/assets/images/icon.png" ng-click="home" ui-sref-active="home"></a>
 
       <h6 class="brandbox">London Fashion <strong>X</strong>change</h6>
       <p class="brandboxWelcome" ng-if="main.isLoggedIn()">Welcome {{ main.currentUser.username }}</p>
