--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <base href="/">
   <title>Final Project</title>
-  <link rel="icon" type="image/png" href="/assets/images/icon.png">
+  <link rel="icon" type="image/png" href="/assets/images/favicon.png">
   <link rel="stylesheet" href="/css/vendor.css">
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/vendor.js" charset="utf-8"></script>
