--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <base href="/">
-  <title>Final Project</title>
+  <title>London Fashion Xchange</title>
   <link rel="icon" type="image/png" href="/assets/images/favicon.png">
   <link rel="stylesheet" href="/css/vendor.css">
   <link rel="stylesheet" href="/css/style.css">
